--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles</p>
+        </div>
+    </div>
 </body>
 </html>
