--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles</p>
+            <p>parrafo adicional para ver los cambios</p>
         </div>
     </div>
 </body>
