--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,13 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles</p>
             <p>parrafo adicional para ver los cambios</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
