--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
             <p>parrafo adicional para ver los cambios</p>
             <p>suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi &lt;3
+        </div>
     </div>
 </body>
 </html>
