Agregue una imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles</p>
+            <p> <img src="imagenes/image.png" alt="imagen"> </p>
             <p>parrafo adicional para ver los cambios</p>
             <p>suscribete y dale like</p>
         </div>
